[tool.poetry]
name = "beststemsplitterever"
version = "0.1.1"
description = "A powerful audio stem splitter that detects key and BPM, separates tracks into stems, and breaks down drum tracks."
authors = ["Your Name <your@email.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "stem_splitter.py" },
    { include = "drumsep" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"  # Restrict to <3.12 for best compatibility (author tested on 3.11)
librosa = ">=0.9.2"
numpy = ">=1.20.0"
pyyaml = ">=6.0"
demucs = ">=4.0.0"
gdown = ">=4.5.1"
torch = "==2.5.1"
torchaudio = "==2.5.1"

[tool.poetry.scripts]
stem-splitter = "stem_splitter:main"
download-model = "download_model:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
